# qbank

./: .gitignore  CalcPropExport.org  CalcPropQuiz.org  Manual.org  README.md  pyproject.toml
examples/: EjemploAMC.py  EjemploMoodle.py  EjemploVFMoodle.py  EjemploVFamc.py
legacy/: 00preambulo_lecciones.txt  CalculoProposicional.org  EcNormales-RangoX.py
src/qbank/: __init__.py  _export.py  _quiz.py
