[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calcprop-qbank"
version = "0.1.1"
description = "Question bank generator using propositional calculus"
authors = [
    {name = "Andrés Bujosa"},
    {name = "Marcos Bujosa", email = "mbujosab@ucm.es"},
]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.9"
dependencies = [
    "calcprop>=0.1",
]

[project.urls]
Homepage = "https://github.com/mbujosab/calcprop-qbank"
Source   = "https://github.com/mbujosab/calcprop-qbank"

[tool.hatch.build.targets.wheel]
packages = ["src/qbank"]
